@@ -612,6 +612,10 @@ _fbfont
 [out,g:] The current console font file string. If the internal hardcoded font has been used, then its value is "fim://".
 .fi
 .B
+_fbfont_magnify_factor
+[in,g:] The rendered text will use a font magnified by this (integer) factor. Maximal value is "16". (Only if enabled with \-\-with\-font\-magnifying\-factor=0).
+.fi
+.B
 _file_loader
 [in,i:,g:] if not empty, this string will force a file loader (among the ones listed in the \-V switch output); [out] i:_file_loader stores the loader of the current image
 .fi
