@@ -4,8 +4,15 @@
                 Version 0.6-trunk
 
 # (r942)
- * --with-font-magnifying-factor=FACTOR option will render text magnified
-   by (hardcoded) FACTOR times. Useful with very high resolutions and small fonts.
+ * New option configure --with-font-magnifying-factor=FACTOR controls rendering of text
+   font magnification. If FACTOR is positive this value will be hardcoded. 
+# (r944)
+   If FACTOR is negative, the magnification factor in the _fbfont_magnify_factor
+   variable will be used, with -FACTOR as default.
+   If FACTOR is 0 a default of 1 will apply.
+   Option meant to be used with with very high resolutions and small fonts.
+ * configure --with-font-magnifying-factor=0 will enable runtime control of the
+   text magnification factor via variable _fbfont_magnify_factor .
 # (r941)
  * FIXME: description files beginning with "#!fim:desc" (whatever extension) can now
    be detected and loaded as they were normal image files (FIXME: undocumented)
